<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculatorRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewShowNumbers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#00000000"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        tools:text="123" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_weight="3"
            android:background="#252323"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:text="lfsdhlkfhklj" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="#252323"
            android:text="@string/button_delete"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_7"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_8"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_9"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="#252323"
            android:text="@string/button_division"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_4"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_5"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_6"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonMultiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="#252323"
            android:text="@string/button_multiplication"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_1"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_2"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_3"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonSubtraction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="#252323"
            android:text="@string/button_subtraction"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_dot"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonZero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#676767"
            android:text="@string/button_0"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#252323"
            android:text="@string/button_equal"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonAddition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="#252323"
            android:text="@string/button_addition"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>
</LinearLayout>